fix title spacing and font size

--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -21,7 +21,7 @@
     width: 100%;
     text-decoration: line-through;
     text-decoration-thickness: 2px;
-    text-decoration-color: rgb(68, 68, 68);
+    text-decoration-color: rgb(249, 2, 204);
   }
 
   &__delete-icon,
