--- a/src/components/TodoForm/TodoForm.scss
+++ b/src/components/TodoForm/TodoForm.scss
@@ -24,6 +24,7 @@
     &::placeholder {
       color: black;
       font-weight: 700;
+      font-size: 0.8rem;
     }
   }
 
@@ -37,6 +38,7 @@
     padding-bottom: 0.5rem;
     color: black;
     font-weight: 700;
+    font-size: 0.8;
     width: 30%;
   }
 }
