--- a/src/partials/_global.scss
+++ b/src/partials/_global.scss
@@ -21,6 +21,9 @@
   padding-top: 1.6rem;
   padding-bottom: 1.6rem;
   color: black;
+  font-size: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
